流连购 个人中心、关于我们
closes #2  closes #1

--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "pages":[
    "pages/start/start",
    "pages/index/index",
+   "pages/aboutUs_s/index",
    "pages/barRanking/index",
    "pages/barSquare/index",
    "pages/indexx/index",
