--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
 	"appid": "wx212d522fca71351b",
-	"projectname": "%E6%B5%81%E8%BF%9E%E8%B4%AD",
+	"projectname": "%E6%B5%81%E8%BF%9E%E8%B4%AD%E7%89%A9",
 	"condition": {
 		"search": {
 			"current": -1,
